Fix monospace block wrapping and scroll

--- a/packages/app/src/components/monospace-block/monospace-block-text.css
+++ b/packages/app/src/components/monospace-block/monospace-block-text.css
@@ -1,4 +1,4 @@
-@layer components {
+@layer common_components {
 	.TextMonospaceBlock {
 		box-sizing: border-box;
 
@@ -18,14 +18,8 @@
 		line-height: 1.4;
 
 		white-space: pre-wrap;
-		word-break: break-word;
 
 		overflow: auto;
 		max-height: var(--TextMonospaceBlock-max-height);
-	}
-
-	.TextMonospaceBlock-line {
-		display: inline;
-		white-space: pre-wrap;
 	}
 }
